frontend.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      containers:
      - name: frontend
        image: xiaorui/frontend
        ports:
        - containerPort: 3001

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    serviceName: frontend
    app: frontend
    version: v1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3001
  selector:
    app: frontend

#apiVersion: extensions/v1beta1
#kind: Ingress
#metadata:
#annotations:
#    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/add-base-url: "true"
#    nginx.ingress.kubernetes.io/rewrite-target: /
#  name: frontend
  #spec:
  #rules:
  #- http:
  #    paths:
  #    - backend:
  #            #serviceName: frontend
          #servicePort: 80
          #        path: /frontend
