k8s-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-v1
  labels:
    app: frontend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      containers:
      - name: frontend
        image: xiaorui/frontend
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3001

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
    version: v1
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 3001
    protocol: TCP
