dr-mtls-ca.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend
spec:
  host: backend
  subsets:
  - name: v1
    labels:
      version: v1
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN

  - name: v2
    labels:
      version: v2
    trafficPolicy:
      loadBalancer:
        simple: ROUND_ROBIN

  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL

# https://istio.io/docs/reference/config/networking/v1alpha3/destination-rule/#TLSSettings-TLSmode
