vs-circuit-breaker.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend-circuit-breaker
spec:
  host: backend
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 50  # contain http
        connectTimeout: 5s
      http:
        http1MaxPendingRequests: 50
        http2MaxRequests: 1000
        maxRequestsPerConnection: 20
    outlierDetection:
      consecutiveErrors: 50
      interval: 5s
      baseEjectionTime: 10s
      maxEjectionPercent: 50

# https://istio.io/docs/reference/config/networking/v1alpha3/destination-rule/
