vs-fault-abort.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: 
spec:
  hosts:
  - backend
  http:
  - fault:
      abort:
        httpStatus: 500
        percent: 100
    route:
    - destination:
        host: backend
        subset: v1
