vs-fault-delay.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
  - backend
  http:
  - fault:
      delay:
        fixedDelay: 10s
        percent: 100

    route:
    - destination:
        host: backend
        subset: v1
      weight: 0
    - destination:
        host: backend
        subset: v2
      weight: 100
