vs-header-match.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
  - backend
  http:
  - match:
    - headers:
        User-Agent:
          regex: .*chrome.*
    route:
    - destination:
        host: backend
        subset: v1   
      weight: 100

  - route:
    - destination:
        host: backend
        subset: v2
