vs-header-url.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
  - backend
  http:
  - match:
    - uri:
        exact: /info?v1
    - uri:
        regex: ^.*?info\?v1.*$
    - headers:
        user:
          exact: rui
    route:
    - destination:
        host: backend
		subset: v1

  - route:
    - destination:
        host: backend
        subset: v2
