vs-mirror-to-v1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
  - backend
  http:
  - route:
      - destination:
          host: backend
          subset: v2
        weight: 100
    mirror:
        host: backend
        subset: v1
