vs-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
  - backend
  http:
  - route:
    - destination:
        host: backend
        subset: v2
    retries:
      attempts: 10
      perTryTimeout: 3s
      retryOn: "5xx"
