vs-route-rewrite.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
  - backend
  http:
  - match:
    - uri:
        prefix: /hello
    rewrite:
      uri: /info
    route:
    - destination:
        host: backend
        subset: v2
